# dotfiles

./: .gitignore
docker/: README.md  ubuntu20_04.dockerfile
emacs/: README.md
emacs/.emacs.d/: init.el
emacs/.emacs.d/extensions/: lang_c_c++.el  lang_java.el  lang_javascript.el  lang_python.el  lang_rust.el  packages.el
emacs/.emacs.d/snippets/c++-mode/: almost_equals.yasnippet  opencv_meter.yasnippet
emacs/.emacs.d/snippets/cmake-mode/: cmake_cuda.yasnippet
emacs/.emacs.d/snippets/cuda-mode/: __constant__.yasnippet  __device__.yasnippet  __global__.yasnippet  __host__.yasnippet  __shared__.yasnippet  __syncthreads.yasnippet  cudaDeviceSynchronize.yasnippet  cudaError_t.yasnippet  cudaFree.yasnippet  cudaMalloc.yasnippet  cudaMemcpyDeviceToDevice.yasnippet  cudaMemcpyDeviceToHost.yasnippet  cudaMemcpyHostToDevice.yasnippet  cudaSuccess.yasnippet  cuda_handle_error_macro.yasnippet  cuda_kernel.yasnippet  thrust_device_ptr.yasnippet  thrust_device_vector.yasnippet  thrust_host_vector.yasnippet  thrust_raw_pointer_cast.yasnippet  warm_up_gpu.yasnippet
emacs/.emacs.d/snippets/fundamental-mode/: CPPLINT.cfg.yasnippet
emacs/scipts/: add_yasnippet_snippets.sh
os/: .bash_config  .bash_personal_commands  install_environment.sh  install_julia.sh  install_rust.sh
ros/: ros_melodic.sh
ros/ros_tools/: CMakeLists.txt  README.md  package.xml
ros/ros_tools/launch/: laserscan_to_pointcloud.launch
ros/ros_tools/src/: laserscan_to_pointcloud.cpp  laserscan_to_pointcloud.hpp  laserscan_to_pointcloud_node.cpp
tmux/: .tmux.conf  tmux-migrate-options.py
(+12 files in other folders)
